feat: send mails with attachments from event bus